<resources>
    <string name="app_name">Anti
		procras
		tinate</string>
    <string name="about">
	    Task is android time manager for people, who wants to control work time.\n\n
	    This program is free and open source. It is licensed under the GNU GPL v3. \n\n
	    Version: 1.0\n
	    You can download the code of this program from: \n https://github.com/Eive1Me/Diploma/
	    \n\nAuthor: Eive1Me
	    \nE-mail: evangelzm@gmail.com
    </string>
    <string name="DefautMonth">Month day</string>
    <string name="DefaultWeekday">Week day</string>
    <string name="DefaultUser">Offline</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_Login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_Groups">Groups</string>
    <string name="menu_Shuffle">Rearrange tasks</string>
    <dimen name="title_size">32sp</dimen>
    <dimen name="support_text_size">16sp</dimen>
    <string name="title_activity_log_in">LogIn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_name">Input name</string>
    <string name="prompt_desc">Input task description</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="select_deadline_time">Select deadline date</string>
    <string name="select_planned_time">Select planned date</string>
    <string-array name="priority_options">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="status_options">
        <item>Ready</item>
        <item>In progress</item>
        <item>Not started</item>
    </string-array>
    <string-array name="category_options">
        <item>Work</item>
        <item>School related</item>
        <item>Housework</item>
        <item>Steaming</item>
        <item>Relax</item>
    </string-array>
</resources>